- create folder for all html files excluding root - create folder for all css files excluding root - modify standards.png size - add html and css files for the second blog article - modify font color for the fifth blog article

--- a/html/article-5.html
+++ b/html/article-5.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My Favorite Number</title>
-        <link rel="stylesheet" href="./article-5.css" />
+        <link rel="stylesheet" href="../css/article-5.css" />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="./images/favicon-monokai.png"
+            href="../images/favicon-monokai.png"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -74,7 +74,7 @@
                         </div>
                     </header>
                     <img
-                        src="./images/binary-24-1280x.png"
+                        src="../images/binary-24-1280x.png"
                         alt="Binary digits with the pattern '24' highlighted in the middle"
                     />
                     <div class="article-content">
@@ -88,12 +88,16 @@
                             Now that we have my favorite number cleared up, I
                             can tell you a little bit more about myself. My
                             name's Hristiyan and I'm a software engineer at
-                            <a href="https://oblik.studio/" class="article-link"
+                            <a
+                                href="https://oblik.studio/"
+                                target="_blank"
+                                class="article-link"
                                 >Oblik Studio</a
                             >
                             . I've studied computer science at
                             <a
                                 href="https://www.elsys-bg.org/"
+                                target="_blank"
                                 class="article-link"
                                 >ELSYS</a
                             >
@@ -101,12 +105,14 @@
                             thanks to my dear childhood friends
                             <a
                                 href="https://www.instagram.com/yordanoff/"
+                                target="_blank"
                                 class="article-link"
                                 >Joro</a
                             >
                             and
                             <a
                                 href="https://www.instagram.com/nequamx/"
+                                target="_blank"
                                 class="article-link"
                                 >Vlady</a
                             >.
@@ -169,7 +175,6 @@
                                 <a href="https://www.instagram.com/yandodov/">
                                     Instagram</a
                                 >
-                                <span class="bullet">&bull;</span>
                             </li>
                         </ul>
                         <div class="color-theme">
