Properly link all files - add headers and footers to project pages - specify correct file paths for all links - modify css of project pages - fix typography errors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./index.html" class="nav-link">
                                 <div>home</div>
                             </a>
                         </li>
@@ -35,7 +35,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./html/project.html" class="nav-link">
                                 <div>projects</div>
                             </a>
                         </li>
@@ -54,7 +54,10 @@
                             <h1>Hristiyan Dodov</h1>
                             <p class="occupation">
                                 Full-Stack Developer at
-                                <a href="https://oblik.studio/" class="accent"
+                                <a
+                                    href="https://oblik.studio/"
+                                    target="_blank"
+                                    class="accent"
                                     >Oblik Studio</a
                                 >
                             </p>
@@ -147,7 +150,7 @@
                     <section>
                         <h2 class="section-header">Projects</h2>
                         <article>
-                            <a href="#">
+                            <a href="./html/nexo.html">
                                 <img
                                     src="./images/nexo-logo.svg"
                                     alt="Nexo crypto bank logo"
@@ -156,7 +159,7 @@
                             </a>
                             <div class="article-text">
                                 <h3 class="article-title">
-                                    <a href="#">Nexo</a>
+                                    <a href="./html/nexo.html">Nexo</a>
                                 </h3>
                                 <p class="article-description">
                                     Developing and maintaining the product
@@ -164,6 +167,7 @@
                                     crypto-backed loans.
                                     <a
                                         href="https://nexo.io/"
+                                        target="_blank"
                                         class="project-link"
                                         >nexo.io</a
                                     >
@@ -171,7 +175,7 @@
                             </div>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="./html/rundown.html">
                                 <img
                                     src="./images/rundown-logo.svg"
                                     alt="Rundown chrome extension logo"
@@ -180,7 +184,7 @@
                             </a>
                             <div class="article-text">
                                 <h3 class="article-title">
-                                    <a href="#">Rundown</a>
+                                    <a href="./html/rundown.html">Rundown</a>
                                 </h3>
                                 <p class="article-description">
                                     Turns your browser's new-tab page into a
@@ -189,6 +193,7 @@
                                     <a
                                         href="https://chrome.google.com/webstore/detail/rundown/opjjddkgmphhkjlgocopmeolmmibiphb"
                                         class="project-link"
+                                        target="_blank"
                                         >chrome.google.com</a
                                     >
                                 </p>
@@ -203,26 +208,37 @@
                     <footer>
                         <ul class="social-links">
                             <li class="social-link">
-                                <a href="https://github.com/hdodov">Github</a>
+                                <a
+                                    href="https://github.com/hdodov"
+                                    target="_blank"
+                                    >Github</a
+                                >
                                 <span class="bullet">&bull;</span>
                             </li>
                             <li class="social-link">
-                                <a href="https://twitter.com/yandodov"
+                                <a
+                                    href="https://twitter.com/yandodov"
+                                    target="_blank"
                                     >Twitter</a
                                 >
                                 <span class="bullet">&bull;</span>
                             </li>
                             <li class="social-link">
-                                <a href="https://www.linkedin.com/in/yandodov/">
+                                <a
+                                    href="https://www.linkedin.com/in/yandodov/"
+                                    target="_blank"
+                                >
                                     LinkedIn</a
                                 >
                                 <span class="bullet">&bull;</span>
                             </li>
                             <li class="social-link">
-                                <a href="https://www.instagram.com/yandodov/">
+                                <a
+                                    href="https://www.instagram.com/yandodov/"
+                                    target="_blank"
+                                >
                                     Instagram</a
                                 >
-                                <span class="bullet">&bull;</span>
                             </li>
                         </ul>
                         <div class="color-theme">
