added footer style

--- a/blog.html
+++ b/blog.html
@@ -106,18 +106,18 @@
                         <li><a href="https://www.instagram.com/yandodov/" target="_blank">Instagram</a>
                         </li>
                     </ul>
-                    <div>
-                        <span>
-                        <span>Monokai</span>
-                        <span class="arrow">↓</span>
-                        <!-- <select name="" id="">
+                    <div class="picker-arrow">
+                    <span>
+                        <!-- <span>Monokai</span> -->
+                        <select class="theme-picker">
                             <option value="">Dark+</option>
                             <option value="">Light+</option>
                             <option value="">Monokai</option>
                             <option value="">Github Dark</option>
                             <option value="">Github Light</option>
                             <option value="">Solarized Light</option>
-                        </select> -->
+                        </select>
+                        <span class="arrow">↓</span>
                     </span>
                     </div>
                 </footer>
