link blog to all pages

--- a/html/article-5.html
+++ b/html/article-5.html
@@ -25,12 +25,12 @@
                 <nav>
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="../index.html" class="nav-link">
                                 <div>home</div>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./blog.html" class="nav-link">
                                 <div>blog</div>
                             </a>
                         </li>
@@ -39,7 +39,7 @@
                                 <span class="article-name"
                                     >my-favorite-number</span
                                 >
-                                <a href="#"
+                                <a href="./blog.html"
                                     ><svg
                                         width="16"
                                         height="16"
@@ -54,7 +54,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./project.html" class="nav-link">
                                 <div>projects</div>
                             </a>
                         </li>
