--- a/html/article1.html
+++ b/html/article1.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon-monokai.png" type="image/x-icon">
     <title>Number of Ones</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/blog-article1.css">
+    <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="../images/favicon-monokai.png"
+        />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap" rel="stylesheet"> 
 </head>
 
@@ -17,10 +23,10 @@
         <div class="content">
             <nav class="nav-link">
                 <ul>
-                    <li><a class="home" href="">home</a></li>
-                    <li><a class="article1-blog" href="blog.html">blog</a></li>
-                    <li><a class="article1" href="">number-of-ones <span class="x">x</span></a></li>
-                    <li><a class="projects" href="">projects</a></li>
+                    <li><a class="home" href="../index.html">home</a></li>
+                    <li><a class="article1-blog" href="./blog.html">blog</a></li>
+                    <li><a class="article1" href="./blog.html">number-of-ones <span class="x">x</span></a></li>
+                    <li><a class="projects" href="./project.html">projects</a></li>
                 </ul>
             </nav>
             <div class="main-content">
@@ -36,7 +42,7 @@
                             <div class="line">292 lines</div>
                         </div>
                     </header>
-                    <img class="article1-img" src="images/number-of-ones.png" alt="">
+                    <img class="article1-img" src="../images/number-of-ones.png" alt="">
 
                     <article>
                         <p>In this post, I'll explain my solution to the programming puzzle from <a class="green-link" href="">the latest issue</a> of <a class="green-link" href="">@cassidoo</a>'s newsletter.</p>
