--- a/html/oblik.html
+++ b/html/oblik.html
@@ -31,7 +31,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./blog.html" class="nav-link">
                                 <div>blog</div>
                             </a>
                         </li>
