--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="./html/blog.html" class="nav-link">
                                 <div>blog</div>
                             </a>
                         </li>
@@ -73,7 +73,7 @@
                     <section class="articles">
                         <h2 class="section-header">Latest Articles</h2>
                         <article>
-                            <a href="#">
+                            <a href="./html/article1.html">
                                 <img
                                     src="./images/number-of-ones.png"
                                     alt="Number 1 to 38 with all 1s highlighted"
@@ -82,7 +82,9 @@
                             </a>
                             <div class="article-text">
                                 <h3 class="article-title">
-                                    <a href="#">Number of Ones</a>
+                                    <a href="./html/article1.html"
+                                        >Number of Ones</a
+                                    >
                                 </h3>
                                 <p class="article-description">
                                     Calculating digits in a series of numbers.
@@ -94,7 +96,7 @@
                             </div>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="./html/article-2.html">
                                 <img
                                     src="./images/rm-rf-git.png"
                                     alt="Random characters with the command rm -rf .git highlighted in the middle"
@@ -103,7 +105,7 @@
                             </a>
                             <div class="article-text">
                                 <h3 class="article-title">
-                                    <a href="#">
+                                    <a href="./html/article-2.html">
                                         Don't Build Your Own Framework
                                     </a>
                                 </h3>
