link articles 3 and 4 to necessary pages

--- a/html/blog.html
+++ b/html/blog.html
@@ -63,9 +63,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href=""><img src="../images/browser-edge-cache.png" alt=""></a>
+                    <a class="calender" href="./article_3.html"><img src="../images/browser-edge-cache.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href=""> Browser Cache and Edge Cache Explained</a></h3>
+                        <h3><a href="./article_3.html"> Browser Cache and Edge Cache Explained</a></h3>
                         <p class="time">You updated it? Well, yes, but not really.</p>
                         <p>
                             <!-- <span>published on</span> -->
@@ -76,9 +76,9 @@
                 </article>
 
                 <article class="article">
-                    <a class="calender" href=""><img src="../images/siteground.png" alt=""></a>
+                    <a class="calender" href="./article_4.html"><img src="../images/siteground.png" alt=""></a>
                     <div class="article-div">
-                        <h3><a href=""> Fixing SiteGround Dynamic Cache Issues</a></h3>
+                        <h3><a href="./article_4.html"> Fixing SiteGround Dynamic Cache Issues</a></h3>
                         <p class="time">That's what you get for not using WordPress…</p>
                         <p>
                             <!-- <span>published on</span> -->
