--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                         </article>
                         <article>
-                            <a href="#">
+                            <a href="./html/article_3.html">
                                 <img
                                     src="./images/browser-edge-cache.png"
                                     alt="Random characters with browser, random and edge highlighted in the middle"
@@ -129,7 +129,7 @@
                             </a>
                             <div class="article-text">
                                 <h3 class="article-title">
-                                    <a href="#"
+                                    <a href="./html/article_3.html"
                                         >Browser Cache and Edge Cache
                                         Explained</a
                                     >
@@ -143,7 +143,7 @@
                                 </p>
                             </div>
                         </article>
-                        <a href="#" class="more-articles">
+                        <a href="./html/blog.html" class="more-articles">
                             Read More
                             <span class="arrow">→</span>
                         </a>
@@ -201,7 +201,7 @@
                                 </p>
                             </div>
                         </article>
-                        <a href="#" class="more-articles">
+                        <a href="./html/project.html" class="more-articles">
                             View More
                             <span class="arrow">→</span>
                         </a>
