add navbar and footer to articles 3 and 4

--- a/html/article_3.html
+++ b/html/article_3.html
@@ -21,6 +21,46 @@
     </head>
     <body>
         <div class="container">
+            <header>
+                <nav>
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="../index.html" class="nav-link">
+                                <div>home</div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./blog.html" class="nav-link">
+                                <div>blog</div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="article-tab">
+                                <span class="article-name"
+                                    >browser-cache-and-edge-cache-explained</span
+                                >
+                                <a href="./blog.html"
+                                    ><svg
+                                        width="16"
+                                        height="16"
+                                        viewBox="0 0 16 16"
+                                        fill="currentColor"
+                                    >
+                                        <path
+                                            d="M8 8.707l3.646 3.647.708-.707L8.707 8l3.647-3.646-.707-.708L8 7.293 4.354 3.646l-.707.708L7.293 8l-3.646 3.646.707.708L8 8.707z"
+                                        ></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./project.html" class="nav-link">
+                                <div>projects</div>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
             <main>
                 <div class="editor">
                     <div id="heading">
@@ -349,6 +389,47 @@
                             incognito windows, and purge cache.
                         </p>
                     </div>
+                    <hr class="line-break" />
+                    <footer>
+                        <ul class="social-links">
+                            <li class="social-link">
+                                <a
+                                    href="https://github.com/hdodov"
+                                    target="_blank"
+                                    >Github</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://twitter.com/yandodov"
+                                    target="_blank"
+                                    >Twitter</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://www.linkedin.com/in/yandodov/"
+                                    target="_blank"
+                                >
+                                    LinkedIn</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://www.instagram.com/yandodov/"
+                                    target="_blank"
+                                >
+                                    Instagram</a
+                                >
+                            </li>
+                        </ul>
+                        <div class="color-theme">
+                            Monokai <span>&darr;</span>
+                        </div>
+                    </footer>
                 </div>
             </main>
         </div>
