--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </a>
                     </section>
                     <hr class="line-break" />
-                    <section>
+                    <section class="projects">
                         <h2 class="section-header">Projects</h2>
                         <article>
                             <a href="./html/nexo.html">
