--- a/html/article_4.html
+++ b/html/article_4.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>fixing-siteground-dynamic-cache-issues</title>
+        <title>Fixing SiteGround Dynamic Cache Issues</title>
         <link rel="stylesheet" href="../css/article_4.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +21,46 @@
     </head>
     <body>
         <div class="container">
+            <header>
+                <nav>
+                    <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="../index.html" class="nav-link">
+                                <div>home</div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./blog.html" class="nav-link">
+                                <div>blog</div>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <div class="article-tab">
+                                <span class="article-name"
+                                    >fixing-siteground-dynamic-cache-issues</span
+                                >
+                                <a href="./blog.html"
+                                    ><svg
+                                        width="16"
+                                        height="16"
+                                        viewBox="0 0 16 16"
+                                        fill="currentColor"
+                                    >
+                                        <path
+                                            d="M8 8.707l3.646 3.647.708-.707L8.707 8l3.647-3.646-.707-.708L8 7.293 4.354 3.646l-.707.708L7.293 8l-3.646 3.646.707.708L8 8.707z"
+                                        ></path>
+                                    </svg>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./project.html" class="nav-link">
+                                <div>projects</div>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
             <main>
                 <div class="editor">
                     <div id="heading">
@@ -202,6 +242,49 @@
                 <div class="editor-1">
                     <p class="editor-text6">cf-cache-status: DYNAMIC</p>
                     <p class="editor-text5">x-proxy-cache: HIT</p>
+                </div>
+                <div class="editor">
+                    <hr class="line-break" />
+                    <footer>
+                        <ul class="social-links">
+                            <li class="social-link">
+                                <a
+                                    href="https://github.com/hdodov"
+                                    target="_blank"
+                                    >Github</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://twitter.com/yandodov"
+                                    target="_blank"
+                                    >Twitter</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://www.linkedin.com/in/yandodov/"
+                                    target="_blank"
+                                >
+                                    LinkedIn</a
+                                >
+                                <span class="bullet">&bull;</span>
+                            </li>
+                            <li class="social-link">
+                                <a
+                                    href="https://www.instagram.com/yandodov/"
+                                    target="_blank"
+                                >
+                                    Instagram</a
+                                >
+                            </li>
+                        </ul>
+                        <div class="color-theme">
+                            Monokai <span>&darr;</span>
+                        </div>
+                    </footer>
                 </div>
             </main>
         </div>
