--- a/html/blog.html
+++ b/html/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do-Dev</title>
+    <title>Blog &bull; Hristiyan Dodov</title>
     <link rel="stylesheet" href="../css/blog-article1.css">
     <link
             rel="icon"
