--- a/html/blog.html
+++ b/html/blog.html
@@ -115,19 +115,19 @@
                         <li><a href="https://www.instagram.com/yandodov/" target="_blank">Instagram</a>
                         </li>
                     </ul>
-                    <div class="picker-arrow">
-                    <span>
-                        <!-- <span>Monokai</span> -->
+                    <div class="color-theme">
+                    <span class="color-theme-name">
+                        <span>Monokai</span>
+                        <span class="arrow">↓</span>
                         <select class="theme-picker">
                             <option value="">Dark+</option>
                             <option value="">Light+</option>
-                            <option value="" selected="selected">Monokai</option>
+                            <option value="">Monokai</option>
                             <option value="">Github Dark</option>
                             <option value="">Github Light</option>
                             <option value="">Solarized Light</option>
                         </select>
-                        <span class="arrow">↓</span>
-                    </span>
+                        </span>
                     </div>
                 </footer>
             </main>
