- add footer to projects page - add container to body to fit header properly - remove underline from project links and add border-bottom

--- a/html/project.html
+++ b/html/project.html
@@ -21,7 +21,7 @@
         <title>Project &bull; Hristiyan Dodov</title>
     </head>
     <body>
-        <main>
+        <div class="container">
             <header>
                 <nav>
                     <ul class="nav-list">
@@ -43,6 +43,8 @@
                     </ul>
                 </nav>
             </header>
+        </div>
+        <main>
             <div class="editor">
                 <h1>Projects</h1>
                 <p class="first-paragraph">
@@ -69,7 +71,10 @@
                             website of the world's first crypto-backed loans.
                         </p>
                         <p>
-                            <a href="https://nexo.io/" target="_blank"
+                            <a
+                                href="https://nexo.io/"
+                                target="_blank"
+                                class="project-link"
                                 >nexo.io</a
                             >
                         </p>
@@ -102,6 +107,7 @@
                         </p>
                         <p>
                             <a
+                                class="project-link"
                                 href="https://chrome.google.com/webstore/detail/rundown/opjjddkgmphhkjlgocopmeolmmibiphb"
                                 target="_blank"
                                 >Chrome.google.com</a
@@ -136,6 +142,7 @@
                         </p>
                         <p>
                             <a
+                                class="project-link"
                                 href="https://chrome.google.com/webstore/detail/ghostmask/hocnmmdgenefilfpnkbfopcihmekhamf"
                                 target="_blank"
                                 >Chrome.google.com</a
@@ -164,20 +171,75 @@
                         </h2>
                         <p>
                             JavaScript functionality we use in
-                            <a href="https://oblik.studio/" target="_blank"
+                            <a
+                                href="https://oblik.studio/"
+                                target="_blank"
+                                class="project-link"
                                 >Oblik</a
                             >
                             for our <br />
                             projects, packaged in small and reusable modules.
                         </p>
                         <p>
-                            <a href="https://oblik.dev/" target="_blank"
+                            <a
+                                href="https://oblik.dev/"
+                                target="_blank"
+                                class="project-link"
                                 >oblik.dev</a
                             >
                         </p>
                     </div>
                 </div>
-                <br />
+                <hr class="line-break" />
+                <footer>
+                    <ul class="social-links">
+                        <li class="social-link">
+                            <a href="https://github.com/hdodov" target="_blank"
+                                >Github</a
+                            >
+                            <span class="bullet">&bull;</span>
+                        </li>
+                        <li class="social-link">
+                            <a
+                                href="https://twitter.com/yandodov"
+                                target="_blank"
+                                >Twitter</a
+                            >
+                            <span class="bullet">&bull;</span>
+                        </li>
+                        <li class="social-link">
+                            <a
+                                href="https://www.linkedin.com/in/yandodov/"
+                                target="_blank"
+                            >
+                                LinkedIn</a
+                            >
+                            <span class="bullet">&bull;</span>
+                        </li>
+                        <li class="social-link">
+                            <a
+                                href="https://www.instagram.com/yandodov/"
+                                target="_blank"
+                            >
+                                Instagram</a
+                            >
+                        </li>
+                    </ul>
+                    <div class="color-theme">
+                        <span class="color-theme-name">
+                            <span>Monokai</span>
+                            <span class="arrow">↓</span>
+                            <select class="theme-picker">
+                                <option value="">Dark+</option>
+                                <option value="">Light+</option>
+                                <option value="">Monokai</option>
+                                <option value="">Github Dark</option>
+                                <option value="">Github Light</option>
+                                <option value="">Solarized Light</option>
+                            </select>
+                        </span>
+                    </div>
+                </footer>
             </div>
         </main>
     </body>
