--- a/html/rundown.html
+++ b/html/rundown.html
@@ -111,7 +111,20 @@
                             >
                         </li>
                     </ul>
-                    <div class="color-theme">Monokai <span>&darr;</span></div>
+                    <div class="color-theme">
+                        <span class="color-theme-name">
+                            <span>Monokai</span>
+                            <span class="arrow">↓</span>
+                            <select class="theme-picker">
+                                <option value="">Dark+</option>
+                                <option value="">Light+</option>
+                                <option value="">Monokai</option>
+                                <option value="">Github Dark</option>
+                                <option value="">Github Light</option>
+                                <option value="">Solarized Light</option>
+                            </select>
+                        </span>
+                    </div>
                 </footer>
             </div>
         </main>
