--- a/html/article1.html
+++ b/html/article1.html
@@ -152,20 +152,20 @@
                             <li><a href="https://www.instagram.com/yandodov/" target="_blank">Instagram</a>
                             </li>
                         </ul>
-                        <div>
-                            <span>
-                                <span>Monokai</span>
-                                <span class="arrow">↓</span>
-                                <!-- <select name="" id="">
-                         <option value="">Dark+</option>
-                         <option value="">Light+</option>
-                         <option value="">Monokai</option>
-                         <option value="">Github Dark</option>
-                         <option value="">Github Light</option>
-                         <option value="">Solarized Light</option>
-                     </select> -->
-                            </span>
-                        </div>
+                        <div class="color-theme">
+                    <span class="color-theme-name">
+                        <span>Monokai</span>
+                        <span class="arrow">↓</span>
+                        <select class="theme-picker">
+                            <option value="">Dark+</option>
+                            <option value="">Light+</option>
+                            <option value="">Monokai</option>
+                            <option value="">Github Dark</option>
+                            <option value="">Github Light</option>
+                            <option value="">Solarized Light</option>
+                        </select>
+                        </span>
+                    </div>
                     </footer>
                 </main>
             </div>
